Added Extra Functionalities

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     >
       <div class="position-relative">
         <img
-          src="/Keyboard Task/asset/Map.jpg"
+          src="/asset/Map.jpggi"
           alt="map"
           height="500px"
           width="500px"
